--- a/counterpoints/pubspec.yaml
+++ b/counterpoints/pubspec.yaml
@@ -1,14 +1,12 @@
 name: counterpoints
-description: A sample command-line application.
+description: QR codes!? put a birb on it
 version: 1.0.0
-# homepage: https://www.example.com
+homepage: https://www.reddit.com/r/Birbs/top/?t=all
 
 environment:
   sdk: '>=2.17.6 <3.0.0'
 
-# dependencies:
-#   path: ^1.8.0
-
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.16.0
+dependencies: {get: ^4.6.5, walletconnect_dart: ^0.0.11}
